--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,41 @@
-babel==2.9.0
+alembic==1.6.5
+appdirs==1.4.4
+asgiref==3.2.10
+astroid==2.3.3
+Babel==2.9.0
+click==7.1.2
+colorama==0.4.3
+distlib==0.3.2
+Django==3.1.2
+filelock==3.0.12
+Flask==1.0.3
+Flask-Migrate==3.0.1
+Flask-Moment==0.11.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+geojson==2.5.0
+greenlet==1.1.0
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+Mako==1.1.4
+MarkupSafe==1.1.1
+mccabe==0.6.1
+postgres==3.0.0
+psycopg2==2.9.1
+psycopg2-binary==2.9.1
+psycopg2-pool==1.1
+pylint==2.4.4
 python-dateutil==2.6.0
-flask-moment==0.11.0
-flask-wtf==0.14.3
-flask_sqlalchemy==2.4.4
+python-dotenv==0.18.0
+python-editor==1.0.4
+pytz==2020.1
+Shapely==1.7.1
+six==1.14.0
+SQLAlchemy==1.4.20
+sqlparse==0.4.1
+virtualenv==20.4.7
+Werkzeug==2.0.1
+wrapt==1.11.2
+WTForms==2.3.3
